# Callosum

./: .gitignore  .nxignore  Makefile  README.md  nx.json  package.json  tsconfig.base.json
.github/workflows/: build-binary.yml
backend/: README.md
backend/evolution/processor/: project.json
backend/intelligence/engine/: project.json
backend/knowledge/graph/: project.json
backend/personality/dsl-parser/: dune-project  project.json  test_personality.colo
backend/personality/dsl-parser/infrastructure/: Dockerfile
backend/personality/dsl-parser/lib/: optimize.ml  semantic.ml  types.ml
backend/personality/dsl-parser/test/: dune  test_parser.ml
core/: Dockerfile.binary  dsl-parser.opam  dune-project
core/examples/: README.md  flexible_syntax_test.colo  multi_domain_test.colo  sample_personality.colo  test_personality.colo  very_flexible_test.colo
core/infrastructure/: Dockerfile
core/lib/: ast.ml  compiler.ml  dune  lexer.mll  parser.mly  types.ml
core/test/: dune  test_new_syntax.ml  test_parse.ml  test_parser.ml
docs/: PACKAGING.md  READY_FOR_PYPI.md  checklist.md  overview.md  plan.md
frontend/desktop-app/: project.json
frontend/desktop-app/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
frontend/web-app/: project.json
infrastructure/: DOCKER_OPTIMIZATION.md  README-docker.md  README-structure.md  cleanup.sh  compose.override.yml  compose.yml  dev.sh  docker-maintenance.sh
infrastructure/scripts/: init.sql
personality/dsl/: README.md  dsl-parser.opam  sample_personality.colo  test_parse.ml
personality/dsl/lib/: ast.ml  compiler.ml  (+2 more)
python/: pyproject.toml  requirements.txt
python/callosum_dsl/: core.py
python/examples/: basic_usage.py  provider_agnostic_demo.py
python/tests/: README_TESTING.md  demo_working_integration.py
scripts/: build_package.py  publish.py
shared/types/: project.json
(+12 files in other folders)
