(lang dune 3.0)

(name dsl-parser)

(version 0.1.0)

(package
 (name dsl-parser)
 (depends 
  ocaml
  dune
  menhir
  core
  (ppx_deriving (>= "5.0"))
  base
  stdio
  fmt
  logs
  (alcotest :with-test)
  (ocaml-lsp-server :dev)
  (merlin :dev))
 (synopsis "AI Language Personality DSL Parser and Compiler")
 (description "OCaml-based parser and compiler for defining rich, dynamic personalities for AI language models. Features trait evolution, contextual behaviors, knowledge modeling, and multi-target compilation including system prompts for LLMs."))

(generate_opam_files true)

(source (github griffincancode/callosum))

(authors "Griffin")

(maintainers "griffincancode@gmail.com")

(license MIT)

(using menhir 2.1)
